k8s/stage/meteor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meteor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meteor
  template:
    metadata:
      labels:
        app: meteor
    spec:
      volumes:
        - name: dimo-file-server-volume
          persistentVolumeClaim:
            claimName: dimo-fileserver-pvc
      containers:
        - name: app
          image: nationallibraryofnorway/meteor:<version>
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: dimo-file-server-volume
              mountPath: /dimo-file-server
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15

---

apiVersion: v1
kind: Service
metadata:
  name: meteor-service
spec:
  ports:
    - port: 8000
      name: http
      targetPort: 8000
  selector:
    app: meteor
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meteor-ingress
spec:
  rules:
    - host: <host_url>
      http:
        paths:
          - path: /meteor
            pathType: Prefix
            backend:
              service:
                name: meteor-service
                port:
                  number: 8000
